# rag-finetuned-8b

./: .gitignore  README.md  main.py  pyproject.toml
.dvc/: config
data/: .gitignore  processed_evals.dvc  raw.dvc  raw_evals.dvc
eval/: judge.py  run_eval.py
schemas/: answers.py  qa.py
