[project]
name = "rag-finetuned-8b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.10.1",
    "chromadb>=1.5.5",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "litellm>=1.83.0",
    "llama-cpp-python>=0.3.20",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "unstructured>=0.21.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
